fix table overflow

--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,8 @@
   margin: 0;
   padding: 0;
 }
-html {
-  height: 100%;
-}
 body{
-  height: 100%;
+  height: auto;
   background-image: url("../assets/bg.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -95,6 +92,12 @@ table tr{
 
 /* styling for screen sizes above 768px */
 @media screen and (min-width: 768px) {
+  html {
+    height: 100%;
+  }
+  body{
+    height: 100%;
+  }
   .container{
   width: 100%;
   height: 80%;
